<resources>
    <string name="app_name">TeamCom</string>

    <!--activity_login_reg-->
    <string name="btnLogin">Login With Email</string>
    <string name="btnRegister">Register With Email</string>
    <string name="btnReset">Reset Password</string>
    <string name="btnCheck">Check Authentication</string>
    <string name="btnShowReg">Create An Account</string>
    <string name="btnShowLogin">Login To Your Account</string>
    <string name="hintLgnEmail">Email</string>
...
    <string name="proj_tasks">Project Tasks</string>
    <string name="menu_reminders">Reminders</string>

    <string name="group_channel">Channel</string>
    <string name="menu_channel_settings">Channel Settings</string>
    <string name="menu_log">Log</string>
    <string name="menu_members">Members</string>
    <string name="menu_support">Support</string>

    <string name="imgPick">Select Image</string>

    <string name="group_assistant">Assistant</string>
    <string name="menu_assistant">Personal Assistant</string>
...

    <string name="account">Done for today?</string>
    <string name="menu_logout">Logout</string>


    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--fragment_settings-->
    <string name="txtRoles">Roles</string>
    <string name="txtMembers">Members</string>
    <string name="txtInvites">Invites</string>
    <string name="txtDetails">Channel Details</string>
    <string name="txtQueRem">Survey Settings</string>
    <string name="txtTaskStages">Task Stages</string>

    <!--fragment roles-->
    <string name="btnAddNewRole">Add New</string>
    <string name="btnAddNewConvo">Start New Chat</string>
...
