<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".activities.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/content_layout_backg"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_channel_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/btnChangeChannelImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Change Image"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="#0645AD"
                app:layout_constraintBottom_toBottomOf="@+id/img_channel_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_channel_edit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.66" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
android:textColor="@color/color_white"
            android:layout_height="wrap_content"
            android:text="Channel Name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_channel_edit" />

        <EditText
            android:id="@+id/channel_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Channel Name"
            android:textSize="18sp"
            android:background="@drawable/edit_text_backg"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView19"
            android:textColor="@color/color_white"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Channel Description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <EditText
            android:id="@+id/channel_desc_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/hintChannelDesc"
            android:background="@drawable/edit_text_backg"
            android:padding="10dp"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@+id/textView19"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/btn_edit_channel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:text="Save"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/color_1"
            android:textColor="@color/color_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/channel_desc_edit" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>