...
                android:textColor="@color/color_white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/ic_arrow_right" />

            <TextView
                android:id="@+id/txtSettingsMembers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/content_layout_backg"
                android:clickable="true"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-thin"
...
                android:textColor="@color/color_white"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/txtSettingsChannelDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/content_layout_backg"
                android:clickable="true"
                android:fontFamily="sans-serif-thin"
                app:drawableEndCompat="@drawable/ic_arrow_right"
...
